[metadata]
name = jupyter-o2
version = 0.2.8
author = Aaron Kollasch
author_email = awkollasch@gmail.com
summary = Run Jupyter on Orchestra 2
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/aaronkollasch/jupyter-o2
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    Environment :: Console
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = jupyter, remote, ssh, slurm, pexpect, orchestra, o2

[files]
packages =
    jupyter_o2

[entry_points]
console_scripts =
    jupyter-o2 = jupyter_o2:main

[bdist_wheel]
universal = 1

[nosetests]
verbosity=1
detailed-errors=1
with-coverage=1
cover-package=jupyter_o2
debug=nose.loader
pdb=1
pdb-failures=1
